fix legend overflow

--- a/myfilter_frontend/css/custom.css
+++ b/myfilter_frontend/css/custom.css
@@ -31,7 +31,13 @@
 }
 
 .dygraph-legend {
-    background: rgba(255, 255, 255, 0.5);
+    width: auto;
+    background: rgba(255, 255, 255, 0.8);
+    border: 1px solid gray;
+    border-radius: 5px;
+    text-align: right;
+    white-space: nowrap;
+    direction: rtl;
 }
 
 .main {
